--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ Flask==3.0.3
 gitdb==4.0.11
 GitPython==3.1.41
 graypy==2.1.0
+gunicorn==22.0.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+packaging==24.0
 requests==2.32.3
 setuptools==69.0.3
 smmap==5.0.1
