--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 packaging==24.0
+PyYAML==6.0.1
 requests==2.32.3
 setuptools==69.0.3
 smmap==5.0.1
