--- a/responses-example.yaml
+++ b/responses-example.yaml
@@ -6,7 +6,7 @@
     "body": |
       <?xml version="1.0" encoding="UTF-8" standalone="no"?><updata>
          <command force="false" name="update_with_inc_ota">
-            <url name="{{ matched.surprise }}.zip" locattr="" updatezip="true">{{ request.protocol }}://{{ request.hostname }}/updates/update.zip</url>
+            <url name="update.zip" locattr="" updatezip="true">{{ request.protocol }}://{{ request.hostname }}/updates/update.zip</url>
             <md5 name="update.zip">6f1b7cccead929f1ce3e53ef928f9894</md5>
           <storagemem>24622458</storagemem>
             <description country="CN" language="zh">解决一些bug</description>
@@ -19,14 +19,15 @@
     "base64": False
     "responsestatus": 200
     "body": |
-      <?xml version="1.0" encoding="UTF-8" standalone="no"?><updata>
-         <command force="false" name="update_with_inc_ota">
-            <url name="{{ matched.surprise }}.zip" locattr="" updatezip="true">{{ request.protocol }}://{{ request.hostname }}/updates/update.zip</url>
-            <md5 name="update.zip">6f1b7cccead929f1ce3e53ef928f9894</md5>
+      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+      <updata>
+        <command force="false" name="update_with_inc_ota">
+          <url name="{{ matched.surprise }}.zip" locattr="" updatezip="true">{{ request.protocol }}://{{ request.host }}/updates/ota/update.zip</url>
+          <md5 name="{{ matched.surprise }}.zip">962cd8b6c1c9b1ec7ac4dec28809a7a6</md5>
           <storagemem>24622458</storagemem>
-            <description country="CN" language="zh">解决一些bug</description>
-            <description country="ELSE" language="en">fix some bug</description>
-         </command>
+          <description country="CN" language="zh">解决一些bug</description>
+          <description country="ELSE" language="en">fix some bug</description>
+        </command>
       </updata>
 "r/\/more\/(?P<surprise>.*?)\/here/":
   "POST":
@@ -34,12 +35,13 @@
     "base64": False
     "responsestatus": 200
     "body": |
-      <?xml version="1.0" encoding="UTF-8" standalone="no"?><updata>
-         <command force="false" name="update_with_inc_ota">
-            <url name="{{ matched.surprise }}.zip" locattr="" updatezip="true">{{ request.protocol }}://{{ request.hostname }}/updates/update.zip</url>
-            <md5 name="update.zip">6f1b7cccead929f1ce3e53ef928f9894</md5>
+      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+      <updata>
+        <command force="false" name="update_with_inc_ota">
+          <url name="{{ matched.surprise }}.zip" locattr="" updatezip="true">{{ request.protocol }}://{{ request.host }}/updates/ota/update.zip</url>
+          <md5 name="{{ matched.surprise }}.zip">962cd8b6c1c9b1ec7ac4dec28809a7a6</md5>
           <storagemem>24622458</storagemem>
-            <description country="CN" language="zh">解决一些bug</description>
-            <description country="ELSE" language="en">fix some bug</description>
-         </command>
+          <description country="CN" language="zh">解决一些bug</description>
+          <description country="ELSE" language="en">fix some bug</description>
+        </command>
       </updata>
