--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.3
+gevent==24.2.1
 gitdb==4.0.11
 GitPython==3.1.43
 graypy==2.1.0
+greenlet==3.0.3
 gunicorn==22.0.0
 idna==3.7
 itsdangerous==2.2.0
@@ -20,3 +22,5 @@ urllib3==2.2.1
 Werkzeug==3.0.3
 wheel==0.43.0
 xmltodict==0.13.0
+zope.event==5.0
+zope.interface==6.4.post2
