--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
 	"name": "Python 3",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
+	"image": "mcr.microsoft.com/devcontainers/python:1-3.13-bookworm",
 	"initializeCommand": "touch ${localWorkspaceFolder}/.env",
 	"runArgs": [
 		"--env-file",
@@ -51,16 +51,16 @@
 		"settings": {
 			"python.pythonPath": "/usr/local/bin/python",
 			"python.analysis.extraPaths": [
-				"./src",
+				"./src"
 			]
-		},
+		}
 	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "echo 'export PYTHONPATH=./src' >> /home/vscode/.zshrc && echo 'export PATH=$PATH:/home/vscode/.local/bin' >> /home/vscode/.zshrc && pip3 install --user -r requirements.txt",
+	"postCreateCommand": "echo 'export PYTHONPATH=./src' >> /home/vscode/.zshrc && echo 'export PATH=$PATH:/home/vscode/.local/bin' >> /home/vscode/.zshrc && pip3 install --user -r requirements-dev.txt"
 	// Configure tool-specific properties.
 	// "customizations": {},
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
