--- a/.github/workflows/dependabot-release.yml
+++ b/.github/workflows/dependabot-release.yml
@@ -15,10 +15,50 @@ permissions:
   actions: write
 
 jobs:
-  approve-dependabot-pr:
+  run-tests:
     if: ${{ github.event_name == 'pull_request_target' && (github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]') }}
     runs-on: ubuntu-latest
-    
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.13'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements-dev.txt
+
+    - name: Run test suite
+      run: |
+        pytest tests/ --cov=src --cov-report=term --cov-report=xml -v
+
+    - name: Check test results
+      run: |
+        if [ $? -ne 0 ]; then
+          echo "Tests failed! Blocking release."
+          exit 1
+        fi
+        echo "All tests passed successfully!"
+
+    - name: Upload coverage report
+      uses: codecov/codecov-action@v4
+      if: always()
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: false
+
+  approve-dependabot-pr:
+    needs: run-tests
+    if: ${{ github.event_name == 'pull_request_target' && (github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]') }}
+    runs-on: ubuntu-latest
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -39,10 +79,10 @@ jobs:
     needs: approve-dependabot-pr
     if: ${{ github.event_name == 'pull_request_target' && (github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]') }}
     runs-on: ubuntu-latest
-    
+
     outputs:
       new_version: ${{ steps.get_latest_version.outputs.new_version }}
-    
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -57,7 +97,7 @@ jobs:
         new_version="v${major}.${minor}.${new_patch}"
         echo "New version: $new_version"
         echo "::set-output name=new_version::$new_version"
-      
+
     - name: Create draft release
       id: create_release
       env:
@@ -73,7 +113,7 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      
+
     - name: Publish draft release
       env:
         GITHUB_TOKEN: ${{ secrets.PAM_REPO }}
