--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,9 @@ blinker==1.9.0
 certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.3.0
+defusedxml==0.7.1
 Flask==3.1.2
 gevent==25.9.1
-gitdb==4.0.12
-GitPython==3.1.45
 graypy==2.1.0
 greenlet==3.2.4
 gunicorn==23.0.0
@@ -13,14 +12,10 @@ idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
-packaging==25.0
 PyYAML==6.0.3
 requests==2.32.5
-setuptools==80.9.0
-smmap==5.0.2
 urllib3==2.5.0
+uuid-utils==0.11.1
 Werkzeug==3.1.3
-wheel==0.45.1
-xmltodict==1.0.2
 zope.event==6.0
 zope.interface==8.0.1
