--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -48,11 +48,11 @@ jobs:
 
     - name: Run Flake8 (linter)
       run: |
-        flake8 src/ tests/ --max-line-length=100 --extend-ignore=E203,W503 --statistics
+        flake8 src/ tests/
 
     - name: Run MyPy (type checker)
       run: |
-        mypy src/ --ignore-missing-imports --no-strict-optional
+        mypy src/
 
   tests:
     runs-on: ubuntu-latest
