--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -24,6 +24,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        allow-prereleases: true
 
     - name: Cache pip dependencies
       uses: actions/cache@v4
@@ -39,18 +40,26 @@ jobs:
         pip install -r requirements-dev.txt
 
     - name: Run Black (code formatter)
+      env:
+        PYTHONPATH: ./src
       run: |
         black --check --diff src/ tests/
 
     - name: Run isort (import sorter)
+      env:
+        PYTHONPATH: ./src
       run: |
         isort --check-only --diff src/ tests/
 
     - name: Run Flake8 (linter)
+      env:
+        PYTHONPATH: ./src
       run: |
         flake8 src/ tests/
 
     - name: Run MyPy (type checker)
+      env:
+        PYTHONPATH: ./src
       run: |
         mypy src/
 
@@ -68,6 +77,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        allow-prereleases: true
 
     - name: Cache pip dependencies
       uses: actions/cache@v4
@@ -83,6 +93,8 @@ jobs:
         pip install -r requirements-dev.txt
 
     - name: Run tests with coverage
+      env:
+        PYTHONPATH: ${{ github.workspace }}/src
       run: |
         pytest tests/ --cov=src --cov-report=term --cov-report=xml --cov-report=html -v
 
