--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -94,7 +94,7 @@ jobs:
 
     - name: Run tests with coverage
       env:
-        PYTHONPATH: ${{ github.workspace }}/src
+        PYTHONPATH: ./src
       run: |
         pytest tests/ --cov=src --cov-report=term --cov-report=xml --cov-report=html -v
 
