--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,9 @@
 			"omzPlugins": "https://github.com/zsh-users/zsh-autosuggestions",
 			"username": "vscode"
 		},
-		"ghcr.io/stuartleeks/dev-container-features/shell-history:0": {}
+		"ghcr.io/stuartleeks/dev-container-features/shell-history:0": {},
+		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
+		"ghcr.io/devcontainers/features/node:1": {}
 	},
 	"customizations": {
 		"vscode": {
@@ -60,7 +62,7 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "echo 'export PYTHONPATH=./src' >> /home/vscode/.zshrc && echo 'export PATH=$PATH:/home/vscode/.local/bin' >> /home/vscode/.zshrc && curl -fsSL https://get.pnpm.io/install.sh | sh - && curl -LsSf https://astral.sh/uv/install.sh | sh && pip3 install --user -r requirements-dev.txt"
+	"postCreateCommand": "echo 'export PYTHONPATH=./src' >> /home/vscode/.zshrc && echo 'export PATH=$PATH:/home/vscode/.local/bin' >> /home/vscode/.zshrc && curl -fsSL https://get.pnpm.io/install.sh | SHELL=zsh sh - && curl -LsSf https://astral.sh/uv/install.sh | sh && pip3 install --upgrade pip && pip3 install --user -r requirements-dev.txt"
 	// Configure tool-specific properties.
 	// "customizations": {},
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
